A1/css/style.css
body {
    margin: 0;
}

ul.topnav {
    position: fixed;
    top: 0;
    width: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
    list-style-type: none;
    background-color: #333;
}

ul.topnav li {
    float: left;
}

ul.topnav h1 {
    display: block;
    text-align: center;
    color: white;
    margin-left: 1em;
    margin-right: 1em;
    font-size: x-large;
}

ul.topnav li a {
    display: block;
    color: white;
    text-align: center;
    padding: 20px 16px;
    text-decoration: none;
    font-size: large;
}

ul.topnav li a:hover:not(.active) {
    background-color: #111;
}

ul.topnav li a.active {
    background-color: #4CAF50;
}

ul.topnav li.right {
    float: right;
}

@media screen and (max-width: 600px) {
    ul.topnav li.right, ul.topnav li {
        float: none;
    }
}

.heading {
    height: auto;
    margin-top: 3em;
    margin-left: 1em;
}

p {
    height: auto;
    margin-left: 4em;
}

table {
    margin-left: 4em;
}

